--- a/SysDVW/Pages/Sales/sales-list.cshtml
+++ b/SysDVW/Pages/Sales/sales-list.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="content-wrapper">
-    <div class="col-12 bg-gradient-white" style="font-size:11px;">
+    <div class="col-12 bg-gradient-white">
         <span class="text-danger text-center">@Html.ValidationMessage("CustomError")</span>
         <div class="card-header row">
             <div class="col-8">
