--- a/SysDVW/Pages/Clients/NewClients.cshtml
+++ b/SysDVW/Pages/Clients/NewClients.cshtml
@@ -8,10 +8,10 @@
             <span class="text-danger text-center">@Html.ValidationMessage("CustomError")</span>
             <div class="row mb-0">
                 <div class="offset-4 col-4">
-                    <h2 class="mt-0 text-center">Nuevo Producto</h2>
+                    <h2 class="mt-0 text-center">Nuevo Cliente</h2>
                 </div>
                 <div class="col-4 form-group text-right mt-3">
-                    <a asp-page="/Products/product-list" class="puntero btn btn-primary btn-sm"> <i class="fas fa-backward"></i> Atras</a>
+                    <a asp-page="/Clients/clients-list" class="puntero btn btn-primary btn-sm"> <i class="fas fa-backward"></i> Atras</a>
                 </div>
             </div>
 
@@ -19,51 +19,75 @@
                 <!--Clients area-->
                 <form method="post" asp-page-handler="NewClient" id="cliente">
                     <div class="row" style="font-size:10px;">
-                        <input type="hidden" asp-for="@Model.Client.IdCliente">
-                        <div class="col-4 form-group">
+                        <div class="col-3 form-group">
                             <label for="Nombres">Nombres</label>
-                            <input type="text" id="Nombres" asp-for="@Model.Client.Nombres" value="@Model.Client.Nombres" class="form-control form-control-sm" placeholder="Nombres">
+                            <input type="text" id="Nombres" asp-for="@Model.NewUser.Clientes.Nombres" value="@Model.NewUser.Clientes.Nombres" class="form-control form-control-sm" placeholder="Nombres">
                         </div>
-                        <div class="col-4 form-group">
+                        <div class="col-3 form-group">
                             <label for="Apellidos">Apellidos</label>
-                            <input type="text" id="Apellidos" asp-for="@Model.Client.Apellidos" value="@Model.Client.Apellidos" class="form-control form-control-sm" placeholder="Apellidos">
+                            <input type="text" id="Apellidos" asp-for="@Model.NewUser.Clientes.Apellidos" value="@Model.NewUser.Clientes.Apellidos" class="form-control form-control-sm" placeholder="Apellidos">
                         </div>
-                        <div class="col-4 form-group">
+                        <div class="col-3 form-group">
                             <label for="Cedula">Cedula</label>
-                            <input type="number" id="Cedula" asp-for="@Model.Client.DNI" value="@Model.Client.DNI" class="form-control form-control-sm" placeholder="Cedula">
+                            <input type="number" id="Cedula" asp-for="@Model.NewUser.Clientes.DNI" value="@Model.NewUser.Clientes.DNI" class="form-control form-control-sm" placeholder="Cedula">
                         </div>
-                        <div class="col-4 form-group">
+                        <div class="col-3 form-group">
+                            <label for="Telefono">Telefono</label>
+                            <input type="text" id="Telefono" asp-for="@Model.NewUser.Clientes.Telefono" value="@Model.NewUser.Clientes.Telefono" class="form-control form-control-sm" placeholder="Telefono">
+                        </div>
+                        <div class="col-3 form-group">
+                            <label for="Correo">Correo</label>
+                            <input type="number" id="Correo" asp-for="@Model.NewUser.Empleados.Correo" value="@Model.NewUser.Empleados.Correo" class="form-control form-control-sm" placeholder="Correo Electronico">
+                        </div>
+                        <div class="col-6 form-group">
                             <label for="Direccion">Direccion</label>
-                            <input type="text" id="Direccion" asp-for="@Model.Client.Direccion" value="@Model.Client.Direccion" class="form-control form-control-sm" placeholder="Direccion">
+                            <textarea type="text" id="Direccion" asp-for="@Model.NewUser.Clientes.Direccion" value="@Model.NewUser.Clientes.Direccion" class="form-control form-control-sm" placeholder="Direccion" rows="3"></textarea>
                         </div>
-
-                        <!---Client User area--->
-                        @*<fieldset class="border border-dark col-4" style="font-size:10px;">
-           <legend style="font-size:13px; font-weight:bold;">Usuario del Cliente</legend>
-           <div class="col-4 form-group">
-               <label for="Telefono">Telefono</label>
-               <input type="text" id="Telefono" asp-for="@Model.Client.Telefono" value="@Model.Client.Telefono" class="form-control form-control-sm" placeholder="Telefono">
-           </div>
-           <div class="col-4 form-group">
-               <label for="precioventa">Precio Minimo</label>
-               <input type="text" id="precioventa" asp-for="@Model.Product.Pmin" value="@Model.Product.Pmin" class="form-control form-control-sm" placeholder="Precio Minimo">
-           </div>
-           <div class="col-4 form-group">
-               <label for="precioventa">Precio Maximo</label>
-               <input type="text" id="precioventa" asp-for="@Model.Product.Pmax" value="@Model.Product.Pmax" class="form-control form-control-sm" placeholder="Precio Maximo">
-           </div>
-        </fieldset>*@
-
-
-                        <div class="form-group text-right mt-4">
-                            <button type="submit" class="btn btn-success btn-sm min-width-200">
-                                <i class="fas fa-plus"></i> Agregar
-                            </button>
+                    </div>
+                    @*-Client User area-*@
+                    <div class="icheck-primary">
+                        <input type="checkbox" id="usercheck" onclick="ocultar()" asp-for="@Model.NewUser.changeUser">
+                        <label for="usercheck">
+                            Crear Usuario?
+                        </label>
+                    </div>
+                    <fieldset class="border border-dark col-9" id="User" hidden="hidden">
+                        <legend style="font-size:13px; font-weight:bold;">Nuevo Usuario del Cliente</legend>
+                        <div class="col-6 form-group">
+                            <label for="Usuario">Usuario</label>
+                            <input type="text" id="Usuario" asp-for="@Model.NewUser.Usuario.Usuario" value="@Model.NewUser.Usuario.Usuario" class="form-control form-control-sm" placeholder="Nombre de Usuario">
                         </div>
+                        <div class="row" style="font-size:10px;">
+                            <div class="col-6 form-group">
+                                <label for="Contraseña">Contraseña</label>
+                                <input type="password" id="Contraseña" asp-for="@Model.NewUser.Usuario.Contraseña" value="@Model.NewUser.Usuario.Contraseña" class="form-control form-control-sm" placeholder="Contraseña">
+                            </div>
+                            <div class="col-6 form-group">
+                                <label for="Confirmacion">Confirmacion de Contraseña</label>
+                                <input type="password" id="Confirmacion" asp-for="@Model.NewUser.Usuario.ConfirmPassword" value="@Model.NewUser.Usuario.ConfirmPassword" class="form-control form-control-sm" placeholder="Confirmacion de Contraseña">
+                            </div>
+                        </div>
+                    </fieldset>
+                    <div class="form-group text-right mt-4">
+                        <button type="submit" class="btn btn-success btn-sm">
+                            <i class="fas fa-plus"></i> Agregar
+                        </button>
                     </div>
                 </form>
             </div>
         </div>
     </div>
 </div>
-<script src="~/Theme/js/ProductScript.js"></script>
+<script>
+    function ocultar() {
+        var usercheck = document.getElementById("usercheck");
+        var User = document.getElementById("User");
+
+        if (usercheck.checked == true) {
+            User.hidden = false;
+        }
+        else {
+            User.hidden = true;
+        }
+    }
+</script>
