--- a/SysDVW/Pages/Products/product-list.cshtml
+++ b/SysDVW/Pages/Products/product-list.cshtml
@@ -4,7 +4,8 @@
 }
 
 <div class="content-wrapper">
-    <div class="col-12 bg-gradient-white" style="font-size:11px;">
+    <div class="col-12 bg-gradient-white">
+        <span class="text-danger text-center">@Html.ValidationMessage("CustomError")</span>
         <div class="card-header row">
             <div class="col-4">
                 <h3 class="card-title">Listado de Productos</h3>
