agregar y eliminar categoria de producto

--- a/SysDVW/Pages/Products/EditProduct.cshtml
+++ b/SysDVW/Pages/Products/EditProduct.cshtml
@@ -20,12 +20,19 @@
                 <form method="post" asp-page-handler="EditProduct" id="producto">
                     <div class="row" style="font-size:10px;">
                         <input type="hidden" asp-for="@Model.Product.IdProducto">
-                        <div class="col-4 row">
-                            <div class="col-12">
-                                <label for="Selectcategorytype">Categoria</label>
+                        <div class="col-4 row mr-1">
+                            <div class="col-12 row">
+                                <div class="col-6">
+                                    <label for="Selectcategorytype">Categoria</label>
+                                </div>
+                                <div class="col-6">
+                                    <button type="button" class="btn btn-link text-success" style="font-size:12px;" data-toggle="modal" data-target="#exampleModal">
+                                        <i class="fas fa-plus-circle"></i> Nueva Categoria
+                                    </button>
+                                </div>
                             </div>
                             <div class="col-6 form-group">
-                                <select class="form-control form-control-sm" id="Selectcategorytype" onchange="EditCategoryType()" data-live-search="true">
+                                <select class="form-control form-control-sm" id="Selectcategorytype" onchange="NewCategoryType()" data-live-search="true">
                                     <option value="">Seleccione una Categoria</option>
                                     @foreach (var item in Model.ProductView.categoryList)
                                     {
@@ -100,6 +107,67 @@
     </div>
 </div>
 
+<!-- Modal Categoria-->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Crear Categoria</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body table-responsive">
+                <form method="post" asp-page-handler="AddCategory">
+                    <label for="Descripcion">Descripcion</label>
+                    <input type="text" id="Descripcion" asp-for="@Model.Category.Descripcion" value="@Model.Category.Descripcion" class="form-control form-control-sm" placeholder="Descripcion">
+                    <button type="submit" class="btn btn-success btn-sm mt-2"><i class="fas fa-plus"></i> Crear</button>
+                </form>
+                <hr />
+                <table id="example3" class="table table-bordered table-striped">
+                    <thead class="thead-dark">
+                        <tr>
+                            <th>ID</th>
+                            <th>Descripcion</th>
+                            <th>Accion</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item3 in Model.ProductView.categoryList)
+                        {
+                            <tr>
+                                <td>@item3.IdCategoria</td>
+                                <td>@item3.Descripcion</td>
+                                <td>
+                                    <a asp-page-handler="DeleteCategory" asp-route-id="@item3.IdCategoria" alt="Eliminar" class="text-danger puntero"> <i class="fas fa-trash-alt"></i></a>
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 @section Scripts {
     <script src="~/Theme/js/ProductScript.js"></script>
+    <script>
+        $(function () {
+            $("#example3").DataTable({
+                "responsive": true, "lengthChange": false, "autoWidth": false
+            }).buttons().container().appendTo('#example3_wrapper .col-md-6:eq(0)');
+            $('#example4').DataTable({
+                "paging": true,
+                "lengthChange": false,
+                "searching": false,
+                "ordering": true,
+                "info": true,
+                "autoWidth": false,
+                "responsive": true,
+            });
+        });
+    </script>
 }
+
